# FACSPy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yml
FACSPy/: TODO.txt  __init__.py  _settings.py  _utils.py  utils.py
FACSPy/_resources/: Gating-ML.v2.0.xsd  Transformations.v2.0.xsd  test_fcs.fcs  test_wsp.wsp
FACSPy/analysis/: _deg.py  _dr_samplewise.py  _fold_change.py  _fop.py  _gate_freq.py  _mst.py
FACSPy/clustering/: __init__.py  _flowsom.py  _leiden.py  _parc.py  _phenograph.py
FACSPy/dataset/: __init__.py  _dataset.py  _sample.py  _supplements.py  _transformation.py  _utils.py  _workspaces.py  dataset.py  sample.py  supplements.py  utils.py  workspaces.py
FACSPy/datasets/: __init__.py  _datasets.py  mouse_lineages_downsampled.h5ad  mouse_lineages_downsampled.uns
FACSPy/exceptions/: _exceptions.py  _supplements.py  _utils.py  exceptions.py  supplements.py  utils.py
FACSPy/gates/: _gate_utils.py  _gates.py  _gml_gates.py  _wsp_gates.py  dimension.py  gating_results.py  gating_strategy.py
FACSPy/gating/: gating_strategy.py
FACSPy/io/: _io.py  _utils.py  io.py  load.py
FACSPy/model/: __init__.py  _annotators.py  _classifiers.py  _halvingrandomsearch.py  _sampling.py  _utils.py  annotators.py  classifiers.py
FACSPy/plotting/: __init__.py  _baseplot.py  _basestats.py  _biax.py  _categorical_stripplot.py  _cluster_mfi.py  _clustermap.py  _cofactor_plots.py  _dr.py  _expression_heatmap.py  _fold_change.py  _frequency_plots.py  _gating_strategy.py  _marker_correlations.py  _marker_expressions.py  _metadata.py  _mfi.py  _qc.py  _sample_correlations.py  _sample_distance.py  _samplewise_dr.py  _utils.py  cofactor_plot.py  cofactor_plots.py  gating_strategy.py  qc.py  utils.py
FACSPy/synchronization/: __init__.py  _cofactor_sync.py  _hash_generation.py  _metadata_sync.py  _obs_sync.py  _sample_sync.py  _synchronize.py  _utils.py  _var_sync.py
FACSPy/tests/: accom_files_test.py  classifier_test.py  conftest.py  dummy_MLGatingTrainingSet.pkl  test_dataset.py  test_dataset_utils.py  test_dr.py  test_dr_samplewise.py  test_expression_plots.py  test_flowsom.py  test_fop.py  test_gate_subsets.py  test_group_equalizing.py  test_hash_generation.py  test_heatmaps.py  test_io.py  test_leiden.py  test_mfi.py  test_neighbors.py  test_obs_sync.py  test_parc.py  test_phenograph.py  test_plotting_utils.py  test_sample.py  test_sample_sync.py  test_scatterplots.py  test_stripboxplots.py  test_subset_fluo_channels.py  test_subset_gate.py  test_supplements.py  test_synchronize.py  test_tools_utils.py  test_transformations.py  test_unsupervised_gating.py  test_utils.py  test_var_sync.py
FACSPy/tools/: __init__.py  _correct_expression.py  _diffmap.py  _dr.py  _dr_samplewise.py  _flowsom.py  _fold_change.py  _fop.py  _gate_freq.py  _harmony.py  _leiden.py  _mds.py  _mfi.py  _mst.py  _neighbors.py  _parc.py  _pca.py  _phenograph.py  _scanorama.py  _tsne.py  _umap.py  _utils.py  utils.py
FACSPy/transforms/: _matrix.py  _wsp_transforms.py
docs/: api.md  conf.py  index.md  index.rst  installation.md
docs/api/: dataset.md  index.md  io.md  model.md  plotting.md  settings.md  synchronization.md  tools.md  transformation.md  utils.md
docs/vignettes/: cofactortable_object.nblink  dataset_creation_and_transformation.nblink  dataset_frequency_analysis.nblink  dataset_mfi_fop.nblink  dataset_r_interaction.nblink  dataset_samplewise_analysis.nblink  dataset_singlecell_analysis.nblink  dataset_structure.nblink  dataset_unsupervised_gating.nblink  gate_handling.nblink  index.md  metadata_object.nblink  panel_object.nblink
vignettes/: FACSPy_dataset_structure.ipynb  FACSPy_dataset_vignette.ipynb  FACSPy_gate_handling.ipynb  cofactor_table_vignette.ipynb  dataset_r_interaction.ipynb  metadata_vignette.ipynb  panel_vignette.ipynb
vignettes/spectral/: 03_dataset_gating.ipynb  (+4 more)
(+22 files in other folders)
