[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FACSPy"
version = "0.0.4"
authors = [
  { name="Tarik Exner", email="Tarik.Exner@med.uni-heidelberg.de" },
]
description = "Automated Flow Cytometry Analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flowsom@git+https://github.com/TarikExner/FlowSOM_Python.git@pip_issue",
    "scanpy<=1.9.3",
    "pandas>=2.0.2,<=2.1.1",
    "statsmodels>=0.10.0rc2",
    "lxml>=4.9",
    "flowutils",
    "flowio",
    "KDEpy",
    "anytree",
    "statannotations",
    "parc@git+https://github.com/ShobiStassen/PARC.git@master", # pip version is not up to date.
    "phenograph",
    "seaborn==0.12.2",
    "imblearn"
]
[project.optional-dependencies]
dev = ["pre-commit", "twine>=4.0.2"]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "nbsphinx-link",
    "pandoc",
    "myst_parser"
]
test = [
    "pytest"
]
r_env = ["rpy2", "anndata2ri"]

# dont move this paragraph above dependencies.
# noqa
[tool.hatch.metadata]
allow-direct-references = true

#[project.urls]
#"Homepage" = "http://www.google.de/"
#"Bug Tracker" = "https://github.com/"
